// $Id: CHANGELOG.txt,v 1.86 2010/04/28 20:30:07 alexb Exp $

Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
----------------------------------

- #701390 frega, morningtime, Mixologic, alex_b et. al.: Fix RSS 1.0 parsing
  and add basic test framework for common_syndication_parser.
- #781058 blakehall: Create teaser for imported nodes. NOTE: this may mean that
  your existing installation has shorter node teasers as expected. If this is
  the case, increase "Length of trimmed posts" on admin/content/node-settings.
- #622932-30 mikl: fix remaining non-standard SQL.
- #624464 bangpound: Support tabs as delimiters.

Feeds 6.x 1.0 Alpha 14, 2010-04-11
----------------------------------

- #758664: Fix regression introduced with #740962.

Feeds 6.x 1.0 Alpha 13, 2010-03-30
----------------------------------

- #622932 pounard: Fix SQL capitalization.
- #622932 pounard: Fix non-standard SQL (PostgreSQL compatibility)
- #705872 Scott Reynolds: Added HTTPFetcher autodiscovery
- #740962 alex_b: Fix FileFetcher Attached to Feed Node, Upload Field Not Saving
  File Path.
- #754938 Monkey Master: FeedsCSVParser.inc uses strtolower() while parsing
  UTF-8 files.
- #736684 Souvent22, Mixologic: FeedsDateTime & Batch DateTime causes core
  dumps.
- #750168 jtr: _parser_common_syndication_title does not strip html tags before
  constructing a title.
- #648080 pvhee: FeedsNodeProcessor - static caching of mapping targets makes
  mapping fail with multiple feed configurations.
- #735444 Doug Preble: PubSubHubbub - Fix "Subscription refused by callback URL"
  with PHP 5.2.0.
- alex_b: Suppress namespace warnings when parsing feeds for subscription in
  PuSHSubscriber.inc
- #724184 ekes: catch failures when parsing for PubSubHubbub hub and self.
- #706984 lyricnz: Add FeedsSimplePie::parseExtensions() to allow parsing to be
  customized.
- #728854 Scott Reynolds: Fix $queue->createItem() fails.
- #707098 alex_b: Improve performance of nodeapi and access checks.