@@ -1,5 +1,5 @@
 <?php
-// $Id: feeds_defaults.test,v 1.8 2010/04/28 15:37:32 alexb Exp $
+// $Id: feeds_defaults.test,v 1.9 2010/04/28 20:45:37 alexb Exp $
 
 /**
  * @file
@@ -457,7 +457,7 @@ class FeedsDefaultsUserTestCase extends FeedsDefaultsTestCase {
     // Assert result.
     $this->assertText('Created 4 users.');
     // 1 user has an invalid email address.
-    $this->assertText('There were 1 users that could not be imported because either their name or their email was empty or not valid. Check import data and mapping settings on User processor.');
+    $this->assertText('There was 1 user that could not be imported because either their name or their email was empty or not valid. Check import data and mapping settings on User processor.');
     $this->drupalGet('admin/user/user');
     $this->assertText('Morticia');
     $this->assertText('Fester');
