@@ -1,8 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.86 2010/04/28 20:30:07 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.87 2010/04/28 20:45:37 alexb Exp $
 
 Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
 ----------------------------------
 
+- #776972 lyricnz: Messages use plural when describing single item.
 - #701390 frega, morningtime, Mixologic, alex_b et. al.: Fix RSS 1.0 parsing
   and add basic test framework for common_syndication_parser.
 - #781058 blakehall: Create teaser for imported nodes. NOTE: this may mean that
